<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.BtAvailableFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBtActivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/icon_bluetooth"
        app:iconSize="35dp"
        android:text="@string/bt_activate"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/txtBtDeviceListHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnBtActivate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/bt_device_list_header"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBtDeviceList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/txtBtDeviceListInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBtDeviceListHeader" />

    <TextView
        android:id="@+id/txtBtDeviceListInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvBtDeviceList"
        app:layout_constraintBottom_toTopOf="@id/imgIconDown"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="10dp"
        android:text="@string/bt_device_list_info"/>
    <ImageView
        android:id="@+id/imgIconDown"
        android:contentDescription="@string/cd_icon_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBtDeviceListInfo"
        app:layout_constraintBottom_toTopOf="@id/btnBtOpenSettings"
        android:src="@drawable/icon_arrow_drop_down"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBtOpenSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgIconDown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:icon="@drawable/icon_bluetooth_settings"
        android:text="@string/bt_open_settings"
        app:iconSize="35dp"
        android:textStyle="bold"/>




</androidx.constraintlayout.widget.ConstraintLayout>